# SpacetradersProject

./: .envrc  README.md  cli.py  noxfile.py  pyproject.toml
.direnv/: .secrets.example
applications/project-cli/: pyproject.toml
applications/project-cli/src/project_cli/: __init__.py  __main__.py  main.py
applications/project-cli/src/project_cli/cli_modules/: agent.py
config/: settings.toml
config/database/: settings.toml
config/fastapi/: settings.toml
libs/coreutils-lib/src/core_utils/uuid_utils/: classes.py
libs/database-lib/src/db_lib/: __init__.py
libs/database-lib/src/db_lib/demo_db/: __init__.py  __methods.py  constants.py
libs/depends-lib/src/depends/: __init__.py  db_depends.py
libs/http-lib/: pyproject.toml
sandbox/: agent_conversion.py  db_test.py  test.py
sandbox/demo/: agent_conversion.py  db_test.py  test.py
sandbox/pipelines_sandbox/: agent_pipeline_test.py
