[project]
name = "spacetradersproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "database-lib",
    "domain",
    "dynaconf>=3.2.6",
    "http-lib",
    "loguru>=0.7.3",
    "pydantic>=2.10.5",
    "settings-lib",
]

[dependency-groups]
dev = [
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.1",
]

# [project.scripts]
# cli = "spacetraders_cli.main:app"

[tool.uv.sources]
spacetradersproject = { workspace = true}
http-lib = { workspace = true }
domain = { workspace = true }
database-lib = { workspace = true }
settings-lib = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "packages/domain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spacetraders_data"]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::UserWarning"]
testpaths = ["tests"]
