[project]
name = "project-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "redjax", email = "no@none.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.1.5",
    "database-lib",
    "depends-lib",
    "settings-lib",
    "setup-lib",
]

[project.scripts]
project-cli = "project_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project_cli"]

[tool.uv.sources]
settings-lib = { workspace = true }
database-lib = { workspace = true }
depends-lib = { workspace = true }
setup-lib = { workspace = true }
